                       CHANGES of the IdRel package
	
ToDo: 
 - (12/01/16) ElementsFamily error when running testall.g 
 - add to page 14 of the manual, using a,b,r,s,t,u 
 - add a History chapter to the manual 

############################################################################
2.32 -> 2.33  (18/02/2016)

 - (18/02/16) removed date/version info from file headers 
 - (12/01/16) changes to the ENTITYs in PackageInfo.g 
 - (28/10/15) added MathJax to makedocrel.g 
 - (02/09/15) major edits to README, including GitHub issues link 

############################################################################
2.31 -> 2.32  (24/08/2015)

 - (24/08/15) packed up version 2.32 prior to move from Bitbucket to GitHub 
 - (24/08/15) added PrintObj method for monoid presentations 

############################################################################
2.21 -> 2.31  (01/06/2015)

 - (01/06/15) PackageInfo.g: IdRel is now an accepted package 
 - (01/06/15) converted the bibliography to BibXMLext format 
              and added an URL to Anne's thesis (heyworth.ps.gz)  

############################################################################
2.14 -> 2.21  (10/12/2014)

 - (10/12/14) changed package home to pages.bangor.ac.uk/~mas023/chda/idrel/
 - (10/12/14) started a bitbucket repository for idrel 

############################################################################
2.12 -> 2.14  (11/01/2013)

 - (11/01/13) changed output in tests due to changes for GAP 4.6 

############################################################################
2.11 -> 2.12  (25/04/2012)

 - (23/04/12) replaced ReadTest by Test in tst/testall.g 
 - (28/01/12) corrected typo in manual reported by David Callan 
              now using package directory in the format ../idrel-2.12/ 
              and archive files in the format  kan-2.12.tar 

############################################################################
2.08 -> 2.11  (21/09/2011)
