@@ -8,6 +8,7 @@ ToDo:
 ############################################################################
 2.32 -> 2.33  (18/02/2016)
 
+ - (10/10/16) changed my email address and package releases to github.io
  - (18/02/16) removed date/version info from file headers 
  - (12/01/16) changes to the ENTITYs in PackageInfo.g 
  - (28/10/15) added MathJax to makedocrel.g 
